Fix horizontal gap between items

--- a/styles/themes/mars-full/components/topNav.scss
+++ b/styles/themes/mars-full/components/topNav.scss
@@ -8,6 +8,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
+		gap: 10px;
 		justify-content: space-between;
 		min-height: 50px;
 
@@ -42,9 +43,9 @@
 
 	&__contact-txt {
 		color: $front-mars-top-nav-txt-color;
+		line-height: initial;
 		position: relative;
 		text-decoration: none;
-		line-height: initial;
 
 		&:hover {
 			color: $front-mars-top-nav-txt-color;
